Se agregaron etiquetas meta

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>SUDOKU</title>
+    <meta content="Facundo Gazzera" name="autor">
+    <meta content="Tomas Garbellotto" name="autor">
+    <meta content="Juego Sudoku" name="descripcion">
+    <meta content="sudoku, juego, entretenimiento" name="palabras-principales">
 </head>
 <body>
 
