Se agregaron etiquetas semanticas

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <meta content="Tomas Garbellotto" name="autor">
     <meta content="Juego Sudoku" name="descripcion">
     <meta content="sudoku, juego, entretenimiento" name="palabras-principales">
+    <link rel="stylesheet" href="miEstilo.css" type="text/css">
 </head>
 <body>
-
+<header>
+    <img src="imagenes/logo_sudoku.jpg">
+    <h1>SUDOKU</h1>
+</header>
+<nav> </nav>
+<section> </section>
 </body>
 </html>
