--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 </head>
 <body>
 <header>
-    <img src="imagenes/logo_sudoku.jpg">
     <h1>SUDOKU</h1>
+    <img src="imagenes/logo_sudoku.jpg">
 </header>
 <nav> </nav>
-<section> </section>
+<section> 
+    <p>
+        <button>Como Jugar</button>
+        <button>Jugar</button>
+    </p>
+    
+</section>
 </body>
 </html>
