Se hicieron cambios en index y readme

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <h1>SUDOKU</h1>
 </header>
 <nav> </nav>
-<section> </section>
+<section>
+    <div>
+        JUGAR
+    </div>
+    <div>
+        COMO JUGAR
+    </div>
+</section>
 </body>
 </html>
