--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>SUDOKU</title>
+    <title>SUDOKU - Inicio</title>
     <meta content="Facundo Gazzera" name="autor">
     <meta content="Tomas Garbellotto" name="autor">
     <meta content="Juego Sudoku" name="descripcion">
     <meta content="sudoku, juego, entretenimiento" name="palabras-principales">
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
+    <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">
+
 </head>
 <body>
 <header>
