Se agrego favicon

--- a/jugar-2.html
+++ b/jugar-2.html
@@ -8,6 +8,7 @@
     <meta content="Juego Sudoku" name="descripcion">
     <meta content="sudoku, juego, entretenimiento" name="palabras-principales">
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
+    <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">
 </head>
 <body>
 <header>
