--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta content="sudoku, juego, entretenimiento" name="palabras-principales">
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
     <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
