Se agregaron botones

--- a/como_jugar.html
+++ b/como_jugar.html
@@ -75,7 +75,7 @@
             allowfullscreen></iframe>
     <p>
         <button><a href="jugar.html">Ir a Jugar</a></button>
-        <button><a href="index.html">Volver al Inicio</a></button>
+        <button><a href="index.html">Volver a Inicio</a></button>
     </p>
 </div>
 
