--- a/jugar.html
+++ b/jugar.html
@@ -42,6 +42,7 @@
     </form>
     <p>
         <button><a href="jugar-2.html">Siguiente</a></button>
+        <button><a href="index.html">Volver a Inicio</a></button>
     </p>
 </div>
 </body>
