--- a/como_jugar.html
+++ b/como_jugar.html
@@ -22,7 +22,7 @@
         imagen de abajo, cada cuadrícula de Sudoku viene con algunos espacios ya completados; cuantos más espacios se
         llenen, más fácil será el juego. Los rompecabezas Sudoku más difíciles tienen muy pocos espacios ocupados.</p>
     <h3>No repita ningún número</h3>
-    <img src="imagenes/como_jugar1.jpg">
+    <img src="imagenes/como_jugar1.jpg" alt="Tablero de Ejemplo">
     <p>
         Como usted puede ver, en el cuadrado superior izquierdo (marcado con un círculo azul), este cuadrado ya tiene 7
         de los 9 espacios ocupados. Los únicos números que faltan en el cuadrado son 5 y 6. Al ver qué números faltan en
@@ -51,7 +51,7 @@
         otros números ya están incluidos dentro de cada cuadrado, ya que no puede haber duplicación de los números del 1
         al 9 dentro de cada cuadrado (o fila o columna).
     </p>
-    <img src="imagenes/como_jugar2.jpg">
+    <img src="imagenes/como_jugar2.jpg" alt="Tablero de Ejemplo">
     <p>
         En este caso, podemos notar rápidamente que ya hay números 1 en los cuadrados superiores izquierdos y centrales
         de la cuadrícula (con el número 1 marcado con un círculo rojo). Esto significa que solo queda un espacio en la
