--- a/jugar-2.html
+++ b/jugar-2.html
@@ -11,106 +11,111 @@
     <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">
 </head>
 <body>
-<table id="tablero">
-    <tr id="f1">
-        <td id="c1"></td>
-        <td id="c2"></td>
-        <td id="c3" class="borde_derecho"></td>
-        <td id="c4"></td>
-        <td id="c5"></td>
-        <td id="c6" class="borde_derecho"></td>
-        <td id="c7"></td>
-        <td id="c8"></td>
-        <td id="c9"></td>
-    </tr>
-    <tr id="f2">
-        <td id="c1"></td>
-        <td id="c2"></td>
-        <td id="c3" class="borde_derecho"></td>
-        <td id="c4"></td>
-        <td id="c5"></td>
-        <td id="c6" class="borde_derecho"></td>
-        <td id="c7"></td>
-        <td id="c8"></td>
-        <td id="c9"></td>
-    </tr>
-    <tr id="f3">
-        <td id="c1"></td>
-        <td id="c2"></td>
-        <td id="c3" class="borde_derecho"></td>
-        <td id="c4"></td>
-        <td id="c5"></td>
-        <td id="c6" class="borde_derecho"></td>
-        <td id="c7"></td>
-        <td id="c8"></td>
-        <td id="c9"></td>
-    </tr>
-    <tr id="f4">
-        <td id="c1"></td>
-        <td id="c2"></td>
-        <td id="c3" class="borde_derecho"></td>
-        <td id="c4"></td>
-        <td id="c5"></td>
-        <td id="c6" class="borde_derecho"></td>
-        <td id="c7"></td>
-        <td id="c8"></td>
-        <td id="c9"></td>
-    </tr>
-    <tr id="f5">
-        <td id="c1"></td>
-        <td id="c2"></td>
-        <td id="c3" class="borde_derecho"></td>
-        <td id="c4"></td>
-        <td id="c5"></td>
-        <td id="c6" class="borde_derecho"></td>
-        <td id="c7"></td>
-        <td id="c8"></td>
-        <td id="c9"></td>
-    </tr>
-    <tr id="f6">
-        <td id="c1"></td>
-        <td id="c2"></td>
-        <td id="c3" class="borde_derecho"></td>
-        <td id="c4"></td>
-        <td id="c5"></td>
-        <td id="c6" class="borde_derecho"></td>
-        <td id="c7"></td>
-        <td id="c8"></td>
-        <td id="c9"></td>
-    </tr>
-    <tr id="f7">
-        <td id="c1"></td>
-        <td id="c2"></td>
-        <td id="c3" class="borde_derecho"></td>
-        <td id="c4"></td>
-        <td id="c5"></td>
-        <td id="c6" class="borde_derecho"></td>
-        <td id="c7"></td>
-        <td id="c8"></td>
-        <td id="c9"></td>
-    </tr>
-    <tr id="f8">
-        <td id="c1"></td>
-        <td id="c2"></td>
-        <td id="c3" class="borde_derecho"></td>
-        <td id="c4"></td>
-        <td id="c5"></td>
-        <td id="c6" class="borde_derecho"></td>
-        <td id="c7"></td>
-        <td id="c8"></td>
-        <td id="c9"></td>
-    </tr>
-    <tr id="f9">
-        <td id="c1"></td>
-        <td id="c2"></td>
-        <td id="c3" class="borde_derecho"></td>
-        <td id="c4"></td>
-        <td id="c5"></td>
-        <td id="c6" class="borde_derecho"></td>
-        <td id="c7"></td>
-        <td id="c8"></td>
-        <td id="c9"></td>
-    </tr>
-</table>
+    <header>
+        <h1>SUDOKU</h1>
+    </header>
+    <table id="tablero" align="center">
+        <tbody>
+            <tr id="f1" class="fila">
+                <td id="c1"></td>
+                <td id="c2"></td>
+                <td id="c3" class="borde_derecho"></td>
+                <td id="c4"></td>
+                <td id="c5"></td>
+                <td id="c6" class="borde_derecho"></td>
+                <td id="c7"></td>
+                <td id="c8"></td>
+                <td id="c9"></td>
+            </tr>
+            <tr id="f2" class="fila">
+                <td id="c1"></td>
+                <td id="c2"></td>
+                <td id="c3" class="borde_derecho"></td>
+                <td id="c4"></td>
+                <td id="c5"></td>
+                <td id="c6" class="borde_derecho"></td>
+                <td id="c7"></td>
+                <td id="c8"></td>
+                <td id="c9"></td>
+            </tr>
+            <tr id="f3" class="borde_fila">
+                <td id="c1"></td>
+                <td id="c2"></td>
+                <td id="c3" class="borde_derecho"></td>
+                <td id="c4"></td>
+                <td id="c5"></td>
+                <td id="c6" class="borde_derecho"></td>
+                <td id="c7"></td>
+                <td id="c8"></td>
+                <td id="c9"></td>
+            </tr>
+            <tr id="f4" class="fila">
+                <td id="c1"></td>
+                <td id="c2"></td>
+                <td id="c3" class="borde_derecho"></td>
+                <td id="c4"></td>
+                <td id="c5"></td>
+                <td id="c6" class="borde_derecho"></td>
+                <td id="c7"></td>
+                <td id="c8"></td>
+                <td id="c9"></td>
+            </tr>
+            <tr id="f5" class="fila">
+                <td id="c1"></td>
+                <td id="c2"></td>
+                <td id="c3" class="borde_derecho"></td>
+                <td id="c4"></td>
+                <td id="c5"></td>
+                <td id="c6" class="borde_derecho"></td>
+                <td id="c7"></td>
+                <td id="c8"></td>
+                <td id="c9"></td>
+            </tr>
+            <tr id="f6" class="borde_fila">
+                <td id="c1"></td>
+                <td id="c2"></td>
+                <td id="c3" class="borde_derecho"></td>
+                <td id="c4"></td>
+                <td id="c5"></td>
+                <td id="c6" class="borde_derecho"></td>
+                <td id="c7"></td>
+                <td id="c8"></td>
+                <td id="c9"></td>
+            </tr>
+            <tr id="f7" class="fila">
+                <td id="c1"></td>
+                <td id="c2"></td>
+                <td id="c3" class="borde_derecho"></td>
+                <td id="c4"></td>
+                <td id="c5"></td>
+                <td id="c6" class="borde_derecho"></td>
+                <td id="c7"></td>
+                <td id="c8"></td>
+                <td id="c9"></td>
+            </tr>
+            <tr id="f8" class="fila">
+                <td id="c1"></td>
+                <td id="c2"></td>
+                <td id="c3" class="borde_derecho"></td>
+                <td id="c4"></td>
+                <td id="c5"></td>
+                <td id="c6" class="borde_derecho"></td>
+                <td id="c7"></td>
+                <td id="c8"></td>
+                <td id="c9"></td>
+            </tr>
+            <tr id="f9" class="fila">
+                <td id="c1"></td>
+                <td id="c2"></td>
+                <td id="c3" class="borde_derecho"></td>
+                <td id="c4"></td>
+                <td id="c5"></td>
+                <td id="c6" class="borde_derecho"></td>
+                <td id="c7"></td>
+                <td id="c8"></td>
+                <td id="c9"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
