--- a/jugar.html
+++ b/jugar.html
@@ -9,9 +9,6 @@
     <meta content="sudoku, juego, entretenimiento" name="palabras-principales">
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
     <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -21,10 +18,8 @@
     <form id="formulario_dificultad">
         <p>
             Dificultad: <input type="radio" name="dificultad" value="facil" id="radio_facil"> <label for="radio_facil">Facil</label>
-            <input type="radio" name="dificultad" value="normal" id="radio_normal"> <label
-                for="radio_normal">Normal</label>
-            <input type="radio" name="dificultad" value="dificil" id="radio_dificil"> <label
-                for="radio_dificil">Dificil</label>
+                        <input type="radio" name="dificultad" value="normal" id="radio_normal"> <label for="radio_normal">Normal</label>
+                        <input type="radio" name="dificultad" value="dificil" id="radio_dificil"> <label for="radio_dificil">Dificil</label>
         </p>
         <p>
             <label for="tiempo">Tiempo:</label>
