--- a/jugar-2.html
+++ b/jugar-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<br lang="es">
 <head>
     <meta charset="UTF-8">
     <title>SUDOKU</title>
@@ -10,12 +10,23 @@
     <link rel="stylesheet" href="miEstilo.css" type="text/css">
     <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">
 </head>
-<body>
+<br>
     <header>
         <h1>SUDOKU</h1>
     </header>
-    <table id="tablero" align="center">
-        <tbody>
+
+    <div id="primer_div">
+        <h2>Dificultad</h2>
+        <div id="segundo_div">
+            <h3>Vidas</h3>
+        </div>
+        <div id="tercer_div">
+            <h3>Tiempo</h3>
+        </div>
+    </div>
+<br>
+    <section>
+        <table id="tablero" align="center">
             <tr id="f1" class="fila">
                 <td id="c1"></td>
                 <td id="c2"></td>
@@ -115,7 +126,7 @@
                 <td id="c8"></td>
                 <td id="c9"></td>
             </tr>
-        </tbody>
-    </table>
+        </table>
+    </section>
 </body>
 </html>
