--- a/jugar-2.html
+++ b/jugar-2.html
@@ -7,27 +7,29 @@
     <meta content="Tomas Garbellotto" name="autor">
     <meta content="Juego Sudoku" name="descripcion">
     <meta content="sudoku, juego, entretenimiento" name="palabras-principales">
-    <link rel="stylesheet" href="miEstilo.css" type="text/css">
-    <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="Estilo_Jugar.css" type="text/css">
+    <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
 </head>
 <br>
     <header>
         <h1>SUDOKU</h1>
     </header>
 
-    <div id="primer_div">
-        <h2>Dificultad</h2>
-        <div id="segundo_div">
-            <h3>Vidas</h3>
-        </div>
-        <div id="tercer_div">
-            <h3>Tiempo</h3>
-        </div>
+    <div class="div">
+        <h3>Tiempo</h3>
     </div>
-<br>
+    <div class="div">
+        <h3>Dificultad</h3>
+    </div>
+    <div class="div">
+        <h3>Vidas</h3>
+    </div>
+
+    <div class="clearfix"></div>
+
     <section>
         <table id="tablero" align="center">
             <tr id="f1" class="fila">
