--- a/jugar.html
+++ b/jugar.html
@@ -7,7 +7,7 @@
     <meta content="Tomas Garbellotto" name="autor">
     <meta content="Juego Sudoku" name="descripcion">
     <meta content="sudoku, juego, entretenimiento" name="palabras-principales">
-    <link rel="stylesheet" href="Estilo_Index.css" type="text/css">
+    <link rel="stylesheet" href="Estilo_Jugar.css" type="text/css">
     <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
