Se modifico como:jugar

--- a/como_jugar.html
+++ b/como_jugar.html
@@ -75,8 +75,8 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
     <p>
-        <button class="boton"><a href="jugar.html">Ir a Jugar</a></button>
-        <button class="boton"><a href="index.html">Volver a Inicio</a></button>
+        <button><a href="jugar.html">Ir a Jugar</a></button>
+        <button><a href="index.html">Volver a Inicio</a></button>
     </p>
 </div>
 </body>
