--- a/jugar.html
+++ b/jugar.html
@@ -19,14 +19,15 @@
 </header>
 <div align="center">
     <form id="formulario_dificultad">
-        <p>
+        <div id="dificultad">
             <label for="dificultad"><b>Dificultad: </b></label> 
                 <input type="radio" name="dificultad" value="facil" id="radio_facil"> <label for="radio_facil">Facil</label>
                 <input type="radio" name="dificultad" value="normal" id="radio_normal"> <label for="radio_normal">Normal</label>
                 <input type="radio" name="dificultad" value="dificil" id="radio_dificil"> <label for="radio_dificil">Dificil</label>
-        </p>
-        <p>
-            <label for="tiempo"><b>Tiempo: </b></label>
+        </div>
+        <div id="tiempo-vida">
+            <p class="formulario">
+                <label for="tiempo"><b>Tiempo: </b></label>
             <select name="tiempo" id="tiempo">
                 <option value="ilimitado"> Ilimitado</option>
                 <option value="10_min"> 10 min</option>
@@ -34,15 +35,17 @@
                 <option value="20_min"> 20 min</option>
                 <option value="25_min"> 25 min</option>
             </select>
-
-            <label for="vidas"><b>Vidas: </b></label>
+            </p>
+            <p>
+                <label for="vidas"><b>Vidas: </b></label>
             <select name="vidas" id="vidas">
                 <option value="ilimitado"> Ilimitado</option>
                 <option value="5"> 5</option>
                 <option value="10"> 10</option>
                 <option value="15"> 15</option>
             </select>
-        </p>
+            </p>
+        </div>
     </form>
 </div>
 <div>
