--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <header>
     <h1>SUDOKU</h1>
-    <img src="imagenes/logo_sudoku.jpg" alt="Logo del Sudoku">
+    <img src="imagenes/logo_sudoku.png" alt="Logo del Sudoku">
 </header>
 <nav></nav>
 <section>
