--- a/jugar-2.html
+++ b/jugar-2.html
@@ -18,11 +18,11 @@
         <h1>SUDOKU</h1>
     </header>
 
-    <div class="div">
-        <h3>Tiempo</h3>
+    <div id="dificultad">
+        <h2>Dificultad</h2>
     </div>
     <div class="div">
-        <h3>Dificultad</h3>
+        <h3>Tiempo</h3>
     </div>
     <div class="div">
         <h3>Vidas</h3>
