CSS en todas las paginas

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-<header>
-    <h1>SUDOKU</h1>
-    <img src="imagenes/logo_sudoku.png" alt="Logo del Sudoku">
-</header>
-<nav></nav>
-<section>
-    <p>
-        <button><a href="jugar.html">Jugar</a></button>
-        <button><a href="como_jugar.html">Como Jugar</a></button>
-    </p>
-</section>
+    <header>
+        <h1>SUDOKU</h1>
+        <img id="imagen" src="imagenes/logo_sudoku.png" alt="Logo del Sudoku">
+    </header>
+    <nav></nav>
+    <section>
+        <p>
+            <button><a href="jugar.html">Jugar</a></button>
+            <button><a href="como_jugar.html">Como Jugar</a></button>
+        </p>
+    </section>
 </body>
 </html>
