--- a/jugar-2.html
+++ b/jugar-2.html
@@ -18,15 +18,17 @@
         <h1>SUDOKU</h1>
     </header>
 
-    <div id="dificultad">
-        <h2>Dificultad</h2>
-    </div>
-    <div class="div">
-        <h3>Tiempo</h3>
-    </div>
-    <div class="div">
-        <h3>Vidas</h3>
-    </div>
+    <nav>
+        <div id="dificultad">
+            <h2>Dificultad</h2>
+        </div>
+        <div class="div">
+            <h3>Tiempo</h3>
+        </div>
+        <div class="div">
+            <h3>Vidas</h3>
+        </div>
+    </nav>
 
     <div class="clearfix"></div>
 
