--- a/jugar.html
+++ b/jugar.html
@@ -18,23 +18,24 @@
     <h1>SUDOKU</h1>
 </header>
 <div align="center">
-    <form id="formulario_dificultad">
-        <p>
+    <form>
+        <p id="formulario_dificultad">
             <label for="dificultad"><b>Dificultad: </b></label> 
-                <input type="radio" name="dificultad" value="facil" id="radio_facil"> <label for="radio_facil">Facil</label>
-                <input type="radio" name="dificultad" value="normal" id="radio_normal"> <label for="radio_normal">Normal</label>
-                <input type="radio" name="dificultad" value="dificil" id="radio_dificil"> <label for="radio_dificil">Dificil</label>
+                <input type="radio" name="dificultad" value="facil" id="radio_facil"> <label class="dificultad" for="radio_facil">Facil</label>
+                <input type="radio" name="dificultad" value="normal" id="radio_normal"> <label class="dificultad" for="radio_normal">Normal</label>
+                <input type="radio" name="dificultad" value="dificil" id="radio_dificil"> <label class="dificultad" for="radio_dificil">Dificil</label>
         </p>
-        <p>
+        <p id="formulario_tiempo" class="formulario">
             <label for="tiempo"><b>Tiempo: </b></label>
             <select name="tiempo" id="tiempo">
-                <option value="ilimitado"> Ilimitado</option>
-                <option value="10_min"> 10 min</option>
-                <option value="15_min"> 15 min</option>
-                <option value="20_min"> 20 min</option>
-                <option value="25_min"> 25 min</option>
+                <option value="ilimitado"><label class="tiempo" for="ilimitado">Ilimitado</label></option>
+                <option value="10_min"><label class="tiempo" for="10_min">10 min</label></option>
+                <option value="15_min"><label class="tiempo" for="15_min">15 min</label></option>
+                <option value="20_min"><label class="tiempo" for="20_min">20 min</label></option>
+                <option value="25_min"><label class="tiempo" for="25_min">25 min</label></option>
             </select>
-
+        </p>
+        <p id="formulario_vidas" class="formulario">
             <label for="vidas"><b>Vidas: </b></label>
             <select name="vidas" id="vidas">
                 <option value="ilimitado"> Ilimitado</option>
@@ -43,6 +44,7 @@
                 <option value="15"> 15</option>
             </select>
         </p>
+        <p class="clearfix"></p>
     </form>
 </div>
 <div>
