--- a/jugar-2.html
+++ b/jugar-2.html
@@ -20,13 +20,13 @@
 
     <nav>
         <div id="dificultad">
-            <h2>Dificultad</h2>
+            <h2><label for="dificultad">Dificultad</label></h2>
         </div>
-        <div class="div">
-            <h3>Tiempo</h3>
+        <div id="div1" class="div">
+            <h3 id="tiempo"><label for="tiempo">Tiempo | 00/00</label></h3>
         </div>
-        <div class="div">
-            <h3>Vidas</h3>
+        <div id="div2" class="div">
+            <h3 id="vidas"><label for="vidas">Vidas | --</label></h3>
         </div>
     </nav>
 
