--- a/jugar-2.html
+++ b/jugar-2.html
@@ -19,13 +19,13 @@
     </header>
 
     <nav>
-        <div id="dificultad">
-            <h2><label for="dificultad">Dificultad</label></h2>
-        </div>
-        <div id="div1" class="div">
-            <h3 id="tiempo"><label for="tiempo">Tiempo | 00/00</label></h3>
+        <div id="div1">
+            <h2 id="dificultad"><label for="dificultad">Dificultad</label></h2>
         </div>
         <div id="div2" class="div">
+            <h3 id="tiempo"><label for="tiempo">Tiempo | 00/00</label></h3>
+        </div>
+        <div id="div3" class="div">
             <h3 id="vidas"><label for="vidas">Vidas | --</label></h3>
         </div>
     </nav>
