--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <h1>SUDOKU</h1>
-        <img id="imagen" src="imagenes/logo_sudoku.png" alt="Logo del Sudoku">
+        <img id="imagen" src="imagenes/logo_sudoku2.png" alt="Logo del Sudoku">
     </header>
     <nav></nav>
     <section>
