--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
     <meta content="Tomas Garbellotto" name="autor">
     <meta content="Juego Sudoku" name="descripcion">
     <meta content="sudoku, juego, entretenimiento" name="palabras-principales">
-    <link rel="stylesheet" href="Estilo_Index.css" type="text/css">
+    <link rel="stylesheet" href="Estilo.css" type="text/css">
     <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="index">
     <header>
         <h1>SUDOKU</h1>
-        <img id="imagen" src="imagenes/logo_sudoku2.png" alt="Logo del Sudoku">
+        <img id="imagen" src="imagenes/logo_sudoku.gif" alt="Logo del Sudoku">
     </header>
-    <nav></nav>
     <section>
         <p>
-            <button><a href="jugar.html">Jugar</a></button>
-            <button><a href="como_jugar.html">Como Jugar</a></button>
+            <button id="botonIndex" class="boton"><a class="aIndex" href="jugar.html">Jugar</a></button>
+            <button id="botonIndex" class="boton"><a class="aIndex" href="como_jugar.html">Como Jugar</a></button>
         </p>
     </section>
 </body>
