--- a/jugar-2.html
+++ b/jugar-2.html
@@ -7,32 +7,32 @@
     <meta content="Tomas Garbellotto" name="autor">
     <meta content="Juego Sudoku" name="descripcion">
     <meta content="sudoku, juego, entretenimiento" name="palabras-principales">
-    <link rel="stylesheet" href="Estilo_Jugar_2.css" type="text/css">
+    <link rel="stylesheet" href="Estilo.css" type="text/css">
     <link rel="shortcut icon" href="imagenes/favicon-sudoku.png" type="image/x-icon">    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
-<br>
+<body id="body">
     <header>
         <h1>SUDOKU</h1>
     </header>
 
     <nav>
-        <div id="div1">
-            <h2 id="dificultad"><label class="texto" for="dificultad">Dificultad | ------</label></h2>
+        <div id="divDificultad">
+            <h2 id="dificultad"><label class="dificultad_tiempo_vidas" for="dificultad">Dificultad | ------</label></h2>
         </div>
-        <div id="div2" class="div">
-            <h3 id="tiempo"><label class="texto" for="tiempo">Tiempo | 00/00</label></h3>
+        <div id="divTiempo" class="divTiempoVidas">
+            <h3 id="tiempo"><label class="dificultad_tiempo_vidas" for="tiempo">Tiempo | 00/00</label></h3>
         </div>
-        <div id="div3" class="div">
-            <h3 id="vidas"><label class="texto" for="vidas">Vidas | --</label></h3>
+        <div id="divVidas" class="divTiempoVidas">
+            <h3 id="vidas"><label class="dificultad_tiempo_vidas" for="vidas">Vidas | --</label></h3>
         </div>
     </nav>
 
     <div class="clearfix"></div>
 
-    <section>
+    <section id="section_Jugar_2">
         <div id="borde_tablero" class="tablero">
             <table id="tablero" align="center">
                 <tr id="f1" class="fila">
@@ -138,28 +138,21 @@
         </div>
     
         <div id="botones" class="tablero">
-            <button><a href="">1</a></button>
-            <button><a href="">2</a></button>
-            <button><a href="">3</a></button>
-            <button><a href="">4</a></button>
-            <button><a href="">5</a></button>
-            <button><a href="">6</a></button>
-            <button><a href="">7</a></button>
-            <button><a href="">8</a></button>
-            <button><a href="">9</a></button>
+            <button class="botonesTablero"><a class="a" href="">1</a></button>
+            <button class="botonesTablero"><a class="a" href="">2</a></button>
+            <button class="botonesTablero"><a class="a" href="">3</a></button>
+            <button class="botonesTablero"><a class="a" href="">4</a></button>
+            <button class="botonesTablero"><a class="a" href="">5</a></button>
+            <button class="botonesTablero"><a class="a" href="">6</a></button>
+            <button class="botonesTablero"><a class="a" href="">7</a></button>
+            <button class="botonesTablero"><a class="a" href="">8</a></button>
+            <button class="botonesTablero"><a class="a" href="">9</a></button>
         </div>
     </section>
+    <br>
+    <div>
+        <button id="botonJugar_2" class="boton"><a class="a" href="jugar.html">Atras</a></button>
+        <button id="botonJugar_2" class="boton"><a class="a" href="index.html">Volver a Inicio</a></button>
+    </div>
 </body>
 </html>
-<!--
-<table id="opciones" align="center">
-    <tr><td id="opf1">                                                  <label class="num" for="opc1">1</label></td></tr>
-    <tr><td id="opf2" class="opciones">                                 <label class="num" for="opc2">2</label></td></tr>
-    <tr class="borde_fila_opciones"><td id="opf3" class="opciones">     <label class="num" for="opc3">3</label></td></tr>
-    <tr><td id="opf4" class="opciones">                                 <label class="num" for="opc4">4</label></td></tr>
-    <tr><td id="opf5" class="opciones">                                 <label class="num" for="opc5">5</label></td></tr>
-    <tr class="borde_fila_opciones"><td id="opf6" class="opciones">     <label class="num" for="opc6">6</label></td></tr>
-    <tr><td id="opf7" class="opciones">                                 <label class="num" for="opc7">7</label></td></tr>
-    <tr><td id="opf8" class="opciones">                                 <label class="num" for="opc8">8</label></td></tr>
-    <tr><td id="opf9">                                                  <label class="num" for="opc9">9</label></td></tr>
-</table>
